Closed Bug 543201 Opened 16 years ago Closed 16 years ago

[OOPP] Shockwave position is not correct

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(blocking2.0 alpha2+)

VERIFIED FIXED
Tracking Status
blocking2.0 --- alpha2+

People

(Reporter: bugmozz, Assigned: jimm)

References

()

Details

Attachments

(3 files, 3 obsolete files)

Blocks: OOPP
confimed.
Windowed plugin... I'm having trouble using Spy to figure out whether the window is in the correct position but it's painting incorrectly, or whether one of the windows is positioned incorrectly. Blocks 1.9.3a1, perhaps only for adding shockwave to the OOPP blacklist.
Assignee: nobody → jmathies
Blocks: LorentzBeta1
blocking2.0: --- → alpha1
(In reply to comment #2) > Windowed plugin... I'm having trouble using Spy to figure out whether the > window is in the correct position but it's painting incorrectly, or whether one > of the windows is positioned incorrectly. > > Blocks 1.9.3a1, perhaps only for adding shockwave to the OOPP blacklist. Looks to be an issue with windowed controls. Spy indicates a chain of child windows (class="ImlWinCls") parented to the main GeckoPluginWindow. The final window in the chain which shockwave renders to is offset down and to the right of the root GeckoPluginWindow for some reason.
blocking2.0: alpha1 → alpha2
Attached patch fix (obsolete) — Splinter Review
Attachment #426711 - Flags: review?(bent.mozilla)
Comment on attachment 426711 [details] [diff] [review] fix So we could do this, or we could just always set our x&y to 0 and our width and height equal to parent. I think that might be smarter, actually, because it doesn't really make sense for us to allow a plugin to resize its window.
(In reply to comment #5) > (From update of attachment 426711 [details] [diff] [review]) > So we could do this, or we could just always set our x&y to 0 and our width and > height equal to parent. I think that might be smarter, actually, because it > doesn't really make sense for us to allow a plugin to resize its window. Sounds good, I really don't see any issues with completely locking it down for all content. Plugins should not be modifying containing window traits.
Attachment #426711 - Attachment is obsolete: true
Attachment #426711 - Flags: review?(bent.mozilla)
Attached patch fix (obsolete) — Splinter Review
I had to cache width and height, GetClientRect in the changing event of the child on the parent retrieves the old dimensions.
Attachment #426843 - Flags: review?(bent.mozilla)
Comment on attachment 426843 [details] [diff] [review] fix This looks good except I'm worried that plugins may expect to receive this message somehow. Can we pass the message to the plugins procedure and then fiddle with it? Or do you think that is overkill?
Attached patch patch (obsolete) — Splinter Review
letting it fall through seems to work as well.
Attachment #426843 - Attachment is obsolete: true
Attachment #427472 - Flags: review?(bent.mozilla)
Attachment #426843 - Flags: review?(bent.mozilla)
Comment on attachment 427472 [details] [diff] [review] patch r+ if you reset after the plugin handles it!
Attachment #427472 - Flags: review?(bent.mozilla) → review+
Here is a screenshot of what looks like web page content leaking between tab switches as well as scrolling tearing
Attached patch finalSplinter Review
Attachment #427472 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: in-litmus?
Flags: in-litmus? → in-litmus+
Verified fixed on Firefox Beta 5: Mozilla/5.0 (Windows NT 5.1; rv:5.0) Gecko/20100101 Firefox/5.0 *Note: The flash content (game) loads and displays correctly; it does not shift its location
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: