Bug 543201 - [OOPP] Shockwave window position is not correct. r=bent.